# pydalgauge

./: .flake8  .pre-commit-config.yaml  LICENSE  Makefile  noxfile.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  README.rst
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: docs.yml  pr.yml  release.yml
docs/: conf.py
